# DDPGAlgorithmRL

./: .env-example  .gitignore  README.md  pyproject.toml
.github/workflows/: quality.yml
assets/evidence/: random_policy_report.md  smoke_training_metrics.json
config/: default_simulator.json  default_training.json  smoke_training.json
data/sample_maps/: simple_house.json
docs/: ARTIFACT_INDEX.md  DEMO_GUIDE.md  EXPERIMENTS.md  FINAL_AUDIT.md  GUI_GUIDE.md  PLAN.md  PRD.md  PRD_ddpg_algorithm.md  PRD_simulator.md  PRIVACY_SECURITY.md  PROMPT_LOG.md  QUALITY_STANDARDS.md  RESOURCE_AND_COST.md  RESULTS_GUIDE.md  SCREENSHOTS.md  STYLE_REPORT.md  SUMMARY_REPORT.md  TEACHER_EVIDENCE.md  TODO.md
src/robot_vacuum_ddpg/: __init__.py  main.py
src/robot_vacuum_ddpg/ddpg/: __init__.py  actor.py  agent.py  critic.py  noise.py  replay_buffer.py  soft_update.py
src/robot_vacuum_ddpg/gui/: __init__.py  app.py  canvas_renderer.py  view_model.py
src/robot_vacuum_ddpg/reporting/: __init__.py  demo_report.py
src/robot_vacuum_ddpg/sdk/: __init__.py  sdk.py  session.py
src/robot_vacuum_ddpg/shared/: __init__.py  paths.py  random_seed.py
src/robot_vacuum_ddpg/simulator/: __init__.py  config.py  coverage.py  environment.py  geometry.py  map_loader.py  observation.py  rewards.py  robot.py  sensors.py
tests/: conftest.py
tests/integration/: test_smoke_training.py  test_trajectory.py
tests/unit/: test_ddpg_networks.py  test_environment.py  test_gui_view_model.py  test_map_loader.py  test_noise.py  test_replay_buffer.py  test_rewards.py  test_robot.py  test_soft_update.py
(+10 files in other folders)
