[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-vacuum-ddpg"
version = "1.0.0"
description = "Custom 2D robotic vacuum simulator with a from-scratch PyTorch DDPG smoke pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9,<4",
    "numpy>=2.0,<3",
    "torch>=2.5,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10",
    "pytest-cov>=6,<8",
    "ruff>=0.11,<1",
]

[project.scripts]
robot-vacuum = "robot_vacuum_ddpg.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/robot_vacuum_ddpg"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["robot_vacuum_ddpg"]
omit = [
    "src/robot_vacuum_ddpg/main.py",
    "src/robot_vacuum_ddpg/gui/app.py",
    "src/robot_vacuum_ddpg/gui/canvas_renderer.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
